--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  <div class="logo-placeholder">LOGO</div>
+  <div class="logo-placeholder">
+    <img src="pettycash_websitetransparent2_white.png">
+  </div>
   <div id="gallery"></div>
   <div class="hamburger">
     <div class="line"></div>
