Adding logo and fixing hover

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="logo-placeholder">
+  <div class="logo">
     <img src="pettycash_websitetransparent2_white.png">
   </div>
   <div id="gallery"></div>
