--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <title>PETTY CASH</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 
-<body>
+<body id="top">
   <div class="logo">
-    <img src="pettycash_websitetransparent2_white.png">
+    <a href="#top">
+      <img src="pettycash_websitetransparent2_white.png">
+    </a>
   </div>
   <div id="gallery"></div>
   <div class="hamburger">
